Adicionando informação de Organizações

--- a/Analise_1746.ipynb
+++ b/Analise_1746.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmetir9+/4AslkkVK7IwcD",
+      "authorship_tag": "ABX9TyMmkekcfV/sB7pdaaddoOnu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2438,6 +2438,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* **Comlurb, Guarda Municipal e Rio Luz são as organizações que mais recebem chamados, com um total de 188, 135, 107 mil, respectivalmente.**"
+      ],
+      "metadata": {
+        "id": "-wWjPi5L4mRa"
+      }
     },
     {
       "cell_type": "markdown",
